--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -9,6 +9,9 @@ on:
   pull_request:
     branches:
       - '*'
+      
+# Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
 
 jobs:
   linux:
