--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -22,6 +22,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Dependencies
       run: |
+        sudo apt-get update
         sudo apt install intltool fsharp gtk-sharp2
     - name: Configure and build
       run: |
