--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -22,14 +22,11 @@ jobs:
     - name: Dependencies
       run: |
         # Install additional basic packages 
+        sudo apt update
         sudo apt install intltool
-        # Install mono packages from www.mono-project.com/download/stable (includes mono-msbuild and mono-roslyn)
-        sudo apt install gnupg ca-certificates  
-        sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF  
-        echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list  
+        # Install mono packages
         sudo apt update  
         sudo apt install mono-complete
-        sudo apt install ca-certificates-mono
         # Install mono-dependent packages
         sudo apt install fsharp gtk-sharp2
         # Note: dotnet dependencies are included in the github ubuntu-20.04 environment
