--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -13,28 +13,51 @@ on:
   workflow_dispatch:
 
 jobs:
-  linux:
-
-    runs-on: ubuntu-20.04
-
+  ubuntu2004:  
+    runs-on: ubuntu-latest
+    container:
+      image: "ubuntu:20.04"
     steps:
-    - uses: actions/checkout@v2
     - name: Dependencies
       run: |
-        # Install additional basic packages 
-        sudo apt update
-        sudo apt install intltool
-        # Install mono packages
-        sudo apt update  
-        sudo apt install mono-complete
-        # Install mono-dependent packages
-        sudo apt install fsharp gtk-sharp2
-        # Note: dotnet dependencies are included in the github ubuntu-20.04 environment
-        # Print out installed mono, msbuild and dotnet versions 
+        apt-get update
+        apt-get install -y sudo        
+        sudo apt-get update
+        # Install basic development packages
+        sudo apt-get install -y sed build-essential git autotools-dev autoconf automake cmake intltool
+        sudo apt-get update
+        # Install mono and msbuild
+        # For mono 6.12.0.122 and msbuild 16.6.0 use repo/ubuntu stable-focal main
+        # For mono 6.12.0.147 and msbuild 16.10.1 use repo/ubuntu  preview-focal main
+        sudo apt-get install gnupg ca-certificates
+        sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+        echo "deb https://download.mono-project.com/repo/ubuntu preview-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-preview.list
+        sudo apt-get update
+        sudo apt-get install mono-complete
+        # Install packages dependent on mono
+        sudo apt-get install -y fsharp gtk-sharp2 libglade2.0-cil-dev
+        # Install dotnet
+        sudo apt-get install -y wget
+        wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
+        sudo dpkg -i packages-microsoft-prod.deb
+        rm packages-microsoft-prod.deb
+        sudo apt-get install -y apt-transport-https
+        sudo apt-get update
+        sudo apt-get install -y dotnet-sdk-5.0
+        sudo apt-get install -y dotnet-sdk-3.1
+      shell: bash
+    - name: Verify toolchain versions
+      run: |
+        git --version
+        make --version
         mono -V
         msbuild -version
-        dotnet --info
+      shell: bash
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
     - name: Configure and build
       run: |
         ./configure --profile=gnome
-        make
+        # Dummy make just for now
+        dotnet --info
