Update CI workflow from @lextm PR
Use @lextm as an initial order, and see if container works OK

--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -9,10 +9,9 @@ on:
   pull_request:
     branches:
       - '*'
-  # Manually triggered
-  workflow_dispatch:
 
 jobs:
+# Copied from lextm to check initial workflow
   ubuntu2004:  
     runs-on: ubuntu-latest
     container:
@@ -23,41 +22,33 @@ jobs:
         apt-get update
         apt-get install -y sudo        
         sudo apt-get update
-        # Install basic development packages
-        sudo apt-get install -y sed build-essential git autotools-dev autoconf automake cmake intltool
-        sudo apt-get update
-        # Install mono and msbuild
-        # For mono 6.12.0.122 and msbuild 16.6.0 use repo/ubuntu stable-focal main
-        # For mono 6.12.0.147 and msbuild 16.10.1 use repo/ubuntu  preview-focal main
-        sudo apt-get install gnupg ca-certificates
-        sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-        echo "deb https://download.mono-project.com/repo/ubuntu preview-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-preview.list
-        sudo apt-get update
-        sudo apt-get install mono-complete
-        # Install packages dependent on mono
-        sudo apt-get install -y fsharp gtk-sharp2 libglade2.0-cil-dev
-        # Install dotnet
         sudo apt-get install -y wget
         wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
         sudo dpkg -i packages-microsoft-prod.deb
-        rm packages-microsoft-prod.deb
         sudo apt-get install -y apt-transport-https
         sudo apt-get update
-        sudo apt-get install -y dotnet-sdk-5.0
         sudo apt-get install -y dotnet-sdk-3.1
-      shell: bash
-    - name: Verify toolchain versions
-      run: |
-        git --version
-        make --version
-        mono -V
-        msbuild -version
+        sudo apt-get install -y gnupg ca-certificates
+        sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
+        echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+        sudo apt-get update
+        sudo apt-get install -y sed build-essential intltool fsharp gtk-sharp2
+        sudo apt-get install -y software-properties-common
+        sudo add-apt-repository ppa:git-core/ppa -y
+        sudo apt-get update
+        sudo apt-get install -y git
       shell: bash
     - uses: actions/checkout@v2
       with:
         submodules: true
+    - name: Verify toolchain versions
+      run: |
+        git --version
+        make --version
+        msbuild -version
+      shell: bash
     - name: Configure and build
       run: |
         ./configure --profile=gnome
-        # Dummy make just for now
-        dotnet --info
+        make
+      shell: bash
