--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -23,16 +23,19 @@ jobs:
         apt-get update
         apt-get install -y sudo        
         sudo apt-get update
+        # Install dotnet-sdk packages
         sudo apt-get install -y wget
         wget https://packages.microsoft.com/config/ubuntu/20.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
         sudo dpkg -i packages-microsoft-prod.deb
         sudo apt-get install -y apt-transport-https
         sudo apt-get update
         sudo apt-get install -y dotnet-sdk-3.1
+        # Install mono and msbuild from stable repo
         sudo apt-get install -y gnupg ca-certificates
         sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
         echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
         sudo apt-get update
+        # Install extra packages required for dotdevelop build
         sudo apt-get install -y sed build-essential intltool fsharp gtk-sharp2
         sudo apt-get install -y software-properties-common
         sudo apt-get update
@@ -44,10 +47,10 @@ jobs:
     - name: Verify OS and toolchain versions
       run: |
         uname -a
-        git --version
         make --version
         mono -V
         msbuild -version
+        dotnet --info
       shell: bash
     - name: Configure and build
       run: |
@@ -55,4 +58,3 @@ jobs:
 #        ./configure --profile=gnome
 #        make
       shell: bash
-
