--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -30,16 +30,18 @@ jobs:
         sudo apt-get install -y apt-transport-https
         sudo apt-get update
         sudo apt-get install -y dotnet-sdk-3.1
-        # Install mono and msbuild from stable repo
+        # Install mono and msbuild
         sudo apt-get install -y gnupg ca-certificates
         sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
-        echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+        # Install mono and msbuild from stable repo for versions 6.12.0.122 (mono) and 16.6.0.15201 (msbuild)
+        # echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+        # Install mono and msbuild from preview repo for versions 6.12.0.147 (mono) and 16.10.1 (msbuild)
+        echo "deb https://download.mono-project.com/repo/ubuntu preview-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-preview.list
         sudo apt-get update
         # Install extra packages required for dotdevelop build
         sudo apt-get install -y sed build-essential intltool fsharp gtk-sharp2
         sudo apt-get install -y software-properties-common
         sudo apt-get update
-        echo $SHELL
       shell: bash
 # Don't checkout repo yet - check packages above first
 #    - uses: actions/checkout@v2
@@ -52,7 +54,6 @@ jobs:
         mono -V
         msbuild -version
         dotnet --info
-        echo $SHELL
       shell: bash
     - name: Configure and build
       run: |
