Test monodevelop.yml build
Add the Configure and build stage

--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -34,19 +34,15 @@ jobs:
         sudo apt-get install -y gnupg ca-certificates
         sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
         # Install mono and msbuild from stable repo for versions 6.12.0.122 (mono) and 16.6.0.15201 (msbuild)
-        # echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
+        echo "deb https://download.mono-project.com/repo/ubuntu stable-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
         # Install mono and msbuild from preview repo for versions 6.12.0.147 (mono) and 16.10.1 (msbuild)
-        echo "deb https://download.mono-project.com/repo/ubuntu preview-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-preview.list
+        # echo "deb https://download.mono-project.com/repo/ubuntu preview-focal main" | sudo tee /etc/apt/sources.list.d/mono-official-preview.list
         sudo apt-get update
         # Install extra packages required for dotdevelop build
         sudo apt-get install -y sed build-essential intltool fsharp gtk-sharp2
         sudo apt-get install -y software-properties-common
         sudo apt-get update
       shell: bash
-# Don't checkout repo yet - check packages above first
-#    - uses: actions/checkout@v2
-#      with:
-#        submodules: true
     - name: Verify OS and toolchain versions
       run: |
         uname -a
@@ -55,9 +51,12 @@ jobs:
         msbuild -version
         dotnet --info
       shell: bash
+    - uses: actions/checkout@v2
+      with:
+        submodules: true
+    # Now checkout repo - packages tested OK above
     - name: Configure and build
       run: |
-# Don't take build any further yet        
-#        ./configure --profile=gnome
-#        make
+        ./configure --profile=gnome
+        make
       shell: bash
