--- a/.github/workflows/monodevelop.yml
+++ b/.github/workflows/monodevelop.yml
@@ -42,7 +42,7 @@ jobs:
         sudo apt-get install -y sed git build-essential intltool fsharp gtk-sharp2
         sudo apt-get install -y software-properties-common
         sudo apt-get update
-    - name: Verify OS and toolchain versions
+    - name: Verify OS and tools versions
       run: |
         uname -a
         git --version
@@ -50,10 +50,13 @@ jobs:
         mono -V
         msbuild -version
         dotnet --info
+
+    # Checkout repo
+    - name: Checkout dotdevelop repo
     - uses: actions/checkout@v2
       with:
         submodules: true
-    # Now checkout and build dotdevelop repo (all packages tested OK above)
+    # Configure and build dotdevelop
     - name: Configure and build
       run: |
         ./configure --profile=gnome
